--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -31,6 +31,11 @@
   },
   "rules": {
     "prettier/prettier": "error",
-    "react/jsx-filename-extension": [1, { "extensions": [".js", ".ts", "tsx"] }]
+    "react/jsx-filename-extension": [
+      1,
+      { "extensions": [".js", ".ts", "tsx"] }
+    ],
+    "import/no-unresolved": "off",
+    "import/extensions": "off"
   }
 }
