--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.wirvsvirus</groupId>
-    <artifactId>bettenkapazitaet</artifactId>
+    <artifactId>trackYourBed</artifactId>
+    <description>
+        TrackYourBed - Ein deutschlandweites Bettenmanagementsystem zur Eingabe und Abfrage der Verfügbarkeit von Betten
+        für Krankenhäuser mit Anbindung an Drittanbieter.
+    </description>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
