--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,22 @@ version: '3.2'
 version: '3.1'
 
 services:
-
   db:
-    image: postgres
+    build: ./postgres
     restart: always
     environment:
       POSTGRES_PASSWORD: changemelater
+    volumes:
+      - postgres:/var/lib/postgresql/data
 
   adminer:
     image: adminer
     restart: always
     ports:
       - 8080:8080
+    depends_on:
+      - db
+
+volumes:
+  postgres:
+
