--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -17,7 +17,6 @@
         <spring.doc.version>1.1.49</spring.doc.version>
         <flyway-plugin.version>6.0.4</flyway-plugin.version>
         <postgres.driver.version>42.2.8</postgres.driver.version>
-        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     </properties>
 
     <dependencyManagement>
@@ -38,6 +37,10 @@
         <!-- Spring Boot -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         <dependency>
@@ -47,18 +50,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- Spring Doc -->
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-core</artifactId>
-            <version>${spring.doc.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-ui</artifactId>
-            <version>${spring.doc.version}</version>
         </dependency>
 
         <!-- Model mapper for DTO conversion -->
@@ -78,7 +69,7 @@
     </dependencies>
 
     <build>
-        <finalName>nq-gateway</finalName>
+        <finalName>trackYourBed</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
