--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@types/react-router-dom": "^5.1.3",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
+    "primeicons": "^2.0.0",
+    "primereact": "^4.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
