--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>backend</artifactId>
 
     <properties>
+        <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
         <spring.boot.dependencies.version>2.1.9.RELEASE</spring.boot.dependencies.version>
         <spring.doc.version>1.1.49</spring.doc.version>
@@ -71,6 +72,27 @@
     <build>
         <finalName>trackYourBed</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+
+                    <!-- NOTE: "false" in this context means "cache results". This is a bug.-->
+                    <!-- See: https://issues.apache.org/jira/browse/MCOMPILER-209-->
+                    <useIncrementalCompilation>false</useIncrementalCompilation>
+
+                    <annotationProcessorPaths>
+                        <path>
+                            <groupId>org.mapstruct</groupId>
+                            <artifactId>mapstruct-processor</artifactId>
+                            <version>${org.mapstruct.version}</version>
+                        </path>
+                        <!-- other annotation processors -->
+                    </annotationProcessorPaths>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
