--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "node-sass": "^4.13.1",
     "primeicons": "^2.0.0",
