--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -35,6 +35,7 @@
       { "extensions": [".js", ".ts", "tsx"] }
     ],
     "import/no-unresolved": "off",
-    "import/extensions": "off"
+    "import/extensions": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   }
 }
