--- a/backend/local_deployment/docker-compose.yml
+++ b/backend/local_deployment/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     depends_on:
       - db
     environment:
+      FLYWAY_USER: betten
       FLYWAY_PASSWORD: betten
       FLYWAY_URL: jdbc:postgresql://127.0.0.1:5432/betten
 
