--- a/backend/local_deployment/docker-compose.yml
+++ b/backend/local_deployment/docker-compose.yml
@@ -11,19 +11,17 @@ services:
   service:
     image: trackyourbed
     restart: always
-    network_mode: host
     environment:
-      DB_HOST: 127.0.0.1
+      DB_HOST: db
     ports:
       - 8080:8080
   flyway:
     restart: on-failure
     image: trackyourbed-flyway
-    network_mode: host
     depends_on:
       - db
     environment:
       FLYWAY_USER: betten
       FLYWAY_PASSWORD: betten
-      FLYWAY_URL: jdbc:postgresql://127.0.0.1:5432/betten
+      FLYWAY_URL: jdbc:postgresql://db:5432/betten
 
