--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint '**/*.ts*'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -60,5 +61,6 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^1.19.1"
-  }
+  },
+  "proxy": "http://track-your-bed.org/"
 }
