--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-select": "^3.0.11",
+    "@types/react-table": "^7.0.12",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
@@ -24,6 +26,8 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
+    "react-table": "^7.0.0",
     "react-transition-group": "^4.3.0",
     "typescript": "~3.7.2"
   },
@@ -62,5 +66,5 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "prettier": "^1.19.1"
   },
-  "proxy": "http://track-your-bed.org/"
+  "proxy": "http://api.trackyourbed.org/"
 }
